vote/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  labels:
    app: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
      
  template:
    metadata:
      labels:
        app: vote
    spec:
      serviceAccountName: vote
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: vote
        image: nahlathabet/vote:0.3
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 80
        
        volumeMounts:
        - name: vote-storage
          mountPath: /tmp
      volumes:
      - name: vote-storage
        persistentVolumeClaim:
          claimName: vote-pvc
