vote/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
spec:
  ports:
  - port: 8080
    targetPort: 5000
  selector:
    app: vote
